# conditional-instruction-benchmark

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  cib.example.yaml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  research.yml
.github/workflows/: action-smoke.yml  ci.yml  release.yml
architecture/: TARGET_ARCHITECTURE.md
docs/: MIGRATION_REPORT.md  OPEN_SOURCE_PROJECT.md  PRODUCT.md  PRODUCT_CHECKLIST.md  PUBLICATION_PLAN.md  V0_3_0_RESEARCH_READY.md  V0_4_0_PRODUCT_WEDGE.md  V0_5_0_TIMEOUTS.md  V0_5_2_EVIDENCE_RECOVERY.md
evidence/: migration-summary.json
protocol/: EVIDENCE_PARITY.md
research/: PROMPTFOO_RESEARCH.md
scripts/: publication_check.py
src/cib/: __init__.py  analysis.py  assertion_bridge.py  capabilities.py  checks.py  cli.py  codex_adapter.py  contracts.py  direct_backend.py  doctor.py  manifest.py  materialize.py  normalization.py  parity.py  product_decision.py  promptfoo.py  promptfoo_results.py  reporting.py  scoring.py  shadow.py  tasks.py  trials.py  workflow.py
src/cib/promptfoo_assets/: archive.cjs  cib-canary.cjs
tests/: test_capabilities.py  test_check_product.py  test_cli_product.py  test_contracts.py  test_direct_backend.py  test_doctor.py  test_manifest.py  test_materialize.py  test_normalization.py  test_parity.py  test_promptfoo_results.py  test_publication_check.py  test_scoring.py  test_trials.py  test_workflow.py
tests/fixtures/action/: cib.yaml  fake-codex  fake-npm
